minor fixes
*fixed [Linux] filenames with blank are not supported
*fixed exception output if api response is bad